# easy_tbot

./: .gitignore  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  SECURITY.md  makefile  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: Deleting Older Releases.yml  python-publish.yml
docs/: .gitignore
docs/quick/: cli.md  creating_a_bot.md  database.md  handlers.md  installation.md  management.md  run.md  settings.md  shard_up.md  templates.md
easy_tbot/: __init__.py  settings.py
easy_tbot/bot/: backend.py  loader.py
easy_tbot/bot/aiogram/: backend.py  wrappers.py
easy_tbot/bot/commands/: shells.py
easy_tbot/bot/decorators/: __init__.py  chanel_post.py  classfactory.py  inline.py  message.py  middleware.py  poll.py  query.py
easy_tbot/bot/handlers/: __init__.py  base.py  channel_post.py  inline.py  message.py  middleware.py  poll.py  query.py
easy_tbot/contrib/: __init__.py
easy_tbot/contrib/bot/aiogram/: _backend.py  decorators.py  handlers.py
easy_tbot/contrib/cli/: __init__.py
easy_tbot/contrib/cli/fire/: __init__.py  _backend.py
easy_tbot/contrib/client/: __init__.py
easy_tbot/contrib/client/aiogram/: __init__.py  _backend.py  _middleware_wrapper.py  decorators.py  handlers.py
easy_tbot/contrib/db/: __init__.py
easy_tbot/contrib/db/alchemy/: __init__.py  _backend.py  _shorcuts.py
easy_tbot/contrib/template/: __init__.py
easy_tbot/contrib/template/jinja/: __init__.py  _backend.py
easy_tbot/cookiecutters/: create_project.py
easy_tbot/cookiecutters/commands/: shells.py
easy_tbot/core/: __init__.py  exceptions.py
easy_tbot/core/_tools/: __init__.py  generic_loader.py  meta.py  meta_singleton.py  settings.py
easy_tbot/core/bot/: __init__.py  _loader.py
easy_tbot/core/bot/decorators/: __init__.py  core.py  decorator_factory.py
easy_tbot/core/bot/handlers/: __init__.py  core.py
easy_tbot/core/cli/: __init__.py  _loader.py  _shortcuts.py  backend.py  commads.py  decorator.py  shortcuts.py
easy_tbot/core/client/: __init__.py  _loader.py  backend.py
easy_tbot/core/client/decorators/: __init__.py  _core.py  _decorator_factory.py
easy_tbot/core/client/handlers/: __init__.py  _abstract.py  _core.py
easy_tbot/core/db/: __init__.py  _loader.py  backend.py
easy_tbot/core/template/: __init__.py  _loader.py  _shorcuts.py  backend.py  shorcuts.py
easy_tbot/db/: backend.py  loader.py
easy_tbot/db/alchemy/: __init__.py  backend.py  shorcuts.py
easy_tbot/db/alchemy/commands/: shells.py
easy_tbot/db/dummy/: backend.py
easy_tbot/extra/: __init__.py  create_tbot.py
easy_tbot/extra/cli/: __init__.py
easy_tbot/extra/tpl/: __init__.py
easy_tbot/render/: __init__.py  backend.py  loader.py  shorcuts.py
easy_tbot/render/jinja/: backend.py
easy_tbot/shell/: backend.py  loader.py
easy_tbot/shell/custom/: __init__.py  backend.py
easy_tbot/tools/: meta.py
(+19 files in other folders)
