[tool.poetry]
name = "easy_tbot"
version = "1.1.0"
description = ""
authors = ["Jesús Enrique <jesusefg12@gmail.com>"]
license = "LICENSE"

classifiers=[
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

include = [
    "easy_tbot/extra/tpl/project/botmanager.py.tpl",
    "easy_tbot/extra/tpl/project/settings.py.tpl",
    "easy_tbot/extra/tpl/shard/__init__.py.tpl",
    "easy_tbot/extra/tpl/shard/commands.py.tpl",
    "easy_tbot/extra/tpl/shard/handlers.py.tpl",
    "easy_tbot/extra/tpl/shard/models.py.tpl"
]

[tool.poetry.scripts]
create-tbot = "easy_tbot.extra.create_tbot:main"

[tool.poetry.dependencies]
python = ">=3.6"

# Contrib dependencies

aiogram = {version = "^2.12", optional = true}
jinja2 = {version = "^2.11", optional = true}
sqlalchemy= {version = "^1.4", optional = true}
fire = {version = "^0.4", optional = true}

# Development dependencies

illiterate = { version = "^0.4", python = ">=3.6,<4.0", optional = true}
mkdocs = { version = "^1.0.4", optional = true }
pymdown-extensions = { version= "^8.2", optional = true}
mkdocs-material = { version = "^4.6.0", optional = true }

[tool.poetry.extras]
aiogram = ["aiogram"]
sql = ["sqlalchemy"]
jinja = ["jinja2"]
fire = ["fire"]

contrib = [
    "aiogram",
    "sql",
    "jinja",
    "fire"
]

dev = [
    "illiterate",
    "mkdocs",
    "pymdown-extensions",
    "mkdocs-material"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

